--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <title>Atenção</title>
 
-<link rel="stylesheet" type="text/css" href="style4.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
